it fixes problems with the font-size on mobile
To make the text legible (not so small)

--- a/src/style.css
+++ b/src/style.css
@@ -30,12 +30,10 @@
 
 #features-list{
     height: 28vh;
-
 }
 
 #features-list li{
-    font-size: 1.35vh;
-    width: 90%;
+    width: 60%;
 }
 
 #bar{
